style(OutputView): 우승자 출력에서 리스트 접근 방식 변경