@@ -2,9 +2,7 @@ package racingcar.view;
 
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import racingcar.domain.Car;
-import racingcar.domain.RacingGame;
+import java.util.stream.IntStream;;
 
 public class OutputView {
 
@@ -18,19 +16,16 @@ public class OutputView {
                 .collect(Collectors.joining());
     }
 
-    public static void printCarPositions(RacingGame racingGame) { //데이터 받을 따 컨트롤러 통해서
-        for (Car car : racingGame.getCars()) {
-            System.out.println(car.getName() + " : " + positionToDash(car.getPosition()));
-        }
-        System.out.println();
+    public static void printRacingCar(String name, int position) {
+        System.out.println(name + " : " + positionToDash(position));
     }
 
     public static void printWinnerName(List<String> name) {
         if (name.size() > 1) {
             String winnerNames = String.join(",");
-            System.out.println("최종 우승자 : " + winnerNames);
+            System.out.println("\n최종 우승자 : " + winnerNames);
             return;
         }
-        System.out.println("최종 우승자 : " + name.get(0));
+        System.out.println("\n최종 우승자 : " + name.getFirst());
     }
 }
